security_groups.tf
resource "aws_security_group" "eks_security_group" {
  vpc_id = aws_vpc.eks_vpc.id
  name = "eks-security-group"

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
